# llm-behave

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
llm_assert/: __init__.py
llm_assert/core/: assertions.py  conversation.py  drift.py
llm_assert/engines/: contradiction.py  semantic.py  tone.py
llm_assert/plugin/: fixtures.py  pytest_plugin.py
llm_assert/providers/: anthropic_adapter.py  base.py  ollama_adapter.py  openai_adapter.py
llm_behave/: __init__.py
llm_behave/core/: assertions.py  conversation.py  drift.py
llm_behave/engines/: contradiction.py  semantic.py  tone.py
llm_behave/plugin/: fixtures.py  pytest_plugin.py
llm_behave/providers/: anthropic_adapter.py  base.py  ollama_adapter.py  openai_adapter.py
tests/: test_assertions.py  test_conversation.py  test_drift.py  test_e2e.py  test_harden.py  test_intent.py  test_mentions.py  test_multi_turn.py  test_providers.py  test_semantic_engine.py  test_tone.py
