[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-behave"
version = "0.1.2"
description = "Behavioral testing for LLM applications. pytest plugin with semantic assertions, multi-turn conversation testing, and drift detection. No LLM judge needed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Swanand Potnis", email = "swanandpotnis500@gmail.com" },
]
keywords = ["pytest", "llm", "testing", "ai", "langchain", "openai", "anthropic", "behavioral-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pytest>=7.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
ollama = ["ollama>=0.1"]
all = [
    "llm-behave[semantic,openai,anthropic,ollama]",
]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
    "pytest-html>=3.0",
    "pytest-cov>=4.0",
]

[project.entry-points.pytest11]
llm_behave = "llm_behave.plugin.pytest_plugin"

[project.urls]
Homepage = "https://github.com/Swanand33/llm-behave"
Repository = "https://github.com/Swanand33/llm-behave"
Issues = "https://github.com/Swanand33/llm-behave/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_behave"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
